fix center alignment of the icon-tick on btns

--- a/src/Styles/LikelyLoans/Buttons.scss
+++ b/src/Styles/LikelyLoans/Buttons.scss
@@ -174,6 +174,9 @@
                 color: #4a4a4a;
                 span {
                     color: $brand-secondary-3;
+                    i {
+                        bottom: -1px;
+                    }
                 }
             }
             &.error {
