--- a/src/Styles/LikelyLoans/Modal.scss
+++ b/src/Styles/LikelyLoans/Modal.scss
@@ -22,7 +22,7 @@
                     color: $brand-blue;
                 }
                 ol {
-                    padding-left: 20px;
+                    padding: 10px 0 0 20px;
                 }
             }
         }
